correct Observer & Observable

--- a/NeuroApp/Storyboard/Quiz/QuizPartOne.storyboard
+++ b/NeuroApp/Storyboard/Quiz/QuizPartOne.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -23,39 +24,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bx0-mj-DCg">
-                                <rect key="frame" x="20" y="134" width="374" height="30"/>
-                                <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GpF-1S-qax">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="30"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Labe" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gJd-3a-2S5">
-                                                <rect key="frame" x="0.0" y="0.0" width="374" height="30"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                        </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                        <constraints>
-                                            <constraint firstItem="gJd-3a-2S5" firstAttribute="leading" secondItem="GpF-1S-qax" secondAttribute="leading" id="QrO-Db-FSr"/>
-                                            <constraint firstItem="gJd-3a-2S5" firstAttribute="centerX" secondItem="GpF-1S-qax" secondAttribute="centerX" id="VV2-a6-Ahl"/>
-                                            <constraint firstAttribute="bottom" secondItem="gJd-3a-2S5" secondAttribute="bottom" id="bIU-tE-Mu2"/>
-                                            <constraint firstItem="gJd-3a-2S5" firstAttribute="top" secondItem="GpF-1S-qax" secondAttribute="top" id="ueq-e8-DIC"/>
-                                        </constraints>
-                                    </view>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="GpF-1S-qax" firstAttribute="width" secondItem="bx0-mj-DCg" secondAttribute="width" id="0V4-KO-GlS"/>
-                                    <constraint firstAttribute="bottom" secondItem="GpF-1S-qax" secondAttribute="bottom" id="1MV-0y-zsD"/>
-                                    <constraint firstItem="GpF-1S-qax" firstAttribute="height" secondItem="bx0-mj-DCg" secondAttribute="height" priority="250" id="BVp-rs-lzt"/>
-                                    <constraint firstItem="GpF-1S-qax" firstAttribute="top" secondItem="bx0-mj-DCg" secondAttribute="top" id="fl8-lR-9DE"/>
-                                    <constraint firstItem="GpF-1S-qax" firstAttribute="leading" secondItem="bx0-mj-DCg" secondAttribute="leading" id="fqK-Wf-bcw"/>
-                                    <constraint firstAttribute="trailing" secondItem="GpF-1S-qax" secondAttribute="trailing" id="oe4-px-FNI"/>
-                                </constraints>
-                            </scrollView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zGR-cF-CB4">
-                                <rect key="frame" x="20" y="204" width="374" height="54"/>
+                                <rect key="frame" x="20" y="184" width="374" height="54"/>
                                 <subviews>
                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="5" minValue="0.0" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="78R-an-4bs">
                                         <rect key="frame" x="-2" y="24" width="378" height="31"/>
@@ -144,7 +114,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KgL-tj-cQ7" customClass="RoundButton" customModule="NeuroApp" customModuleProvider="target">
-                                <rect key="frame" x="40" y="298" width="334" height="50"/>
+                                <rect key="frame" x="40" y="278" width="334" height="50"/>
                                 <color key="backgroundColor" name="NAGreen"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="ref-j6-0oC"/>
@@ -157,23 +127,40 @@
                                     <action selector="next:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="0HV-F1-TM2"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GpF-1S-qax">
+                                <rect key="frame" x="20" y="114" width="374" height="30"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Labe" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gJd-3a-2S5">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="gJd-3a-2S5" firstAttribute="leading" secondItem="GpF-1S-qax" secondAttribute="leading" id="QrO-Db-FSr"/>
+                                    <constraint firstItem="gJd-3a-2S5" firstAttribute="centerX" secondItem="GpF-1S-qax" secondAttribute="centerX" id="VV2-a6-Ahl"/>
+                                    <constraint firstAttribute="bottom" secondItem="gJd-3a-2S5" secondAttribute="bottom" id="bIU-tE-Mu2"/>
+                                    <constraint firstItem="gJd-3a-2S5" firstAttribute="top" secondItem="GpF-1S-qax" secondAttribute="top" id="ueq-e8-DIC"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Bbd-Fc-PJj" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="2Y0-mt-H7t"/>
                             <constraint firstItem="zGR-cF-CB4" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="3Bt-ME-Ea1"/>
+                            <constraint firstItem="GpF-1S-qax" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="4LP-HQ-Wef"/>
                             <constraint firstItem="Bbd-Fc-PJj" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="20" id="4yt-vk-Irs"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="KgL-tj-cQ7" secondAttribute="bottom" constant="20" id="9s9-23-iK5"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="GpF-1S-qax" secondAttribute="trailing" constant="20" id="8PP-GJ-uWM"/>
                             <constraint firstItem="KgL-tj-cQ7" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="Gtk-US-d4K"/>
-                            <constraint firstItem="bx0-mj-DCg" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="aTE-EJ-TGg"/>
+                            <constraint firstItem="zGR-cF-CB4" firstAttribute="top" secondItem="GpF-1S-qax" secondAttribute="bottom" constant="40" id="cC0-uH-F07"/>
                             <constraint firstItem="KgL-tj-cQ7" firstAttribute="top" secondItem="zGR-cF-CB4" secondAttribute="bottom" constant="40" id="cK6-Te-vxR"/>
                             <constraint firstItem="Bbd-Fc-PJj" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="e2E-S7-ak7"/>
-                            <constraint firstItem="bx0-mj-DCg" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="eR0-XD-5ca"/>
-                            <constraint firstItem="zGR-cF-CB4" firstAttribute="top" secondItem="bx0-mj-DCg" secondAttribute="bottom" constant="40" id="g7E-ai-xgS"/>
                             <constraint firstItem="zGR-cF-CB4" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="gmt-MO-Pb9"/>
                             <constraint firstItem="KgL-tj-cQ7" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="40" id="guW-fy-rg8"/>
-                            <constraint firstItem="bx0-mj-DCg" firstAttribute="top" secondItem="Bbd-Fc-PJj" secondAttribute="bottom" constant="40" id="mpN-PA-mTP"/>
+                            <constraint firstItem="GpF-1S-qax" firstAttribute="top" secondItem="Bbd-Fc-PJj" secondAttribute="bottom" constant="20" id="n3x-WA-HQx"/>
                         </constraints>
                     </view>
                     <connections>
